# PengGe

./: .gitignore  CMakeLists.txt  README.md
AccountManagement/doc/design/: account_design.asciidoc  account_design.html
AccountManagement/samples/: CMakeLists.txt
AccountManagement/src/client/: client_account.c  client_account.h
AccountManagement/src/commmon/: account.c  account.h  account_config.h  account_macros.h  global.c  macros.h  utility_wrap.c  utility_wrap.h
AccountManagement/src/server/: server_account.c  server_account.h
client_server/: client_server.asciidoc.html  client_server_design.asciidoc  client_server_design.html  client_server计划.asciidoc  client_server计划.html
client_server/Qt_winsock/client/: .client_sendrecv.c.swp  client.pro  client_sendrecv.c  client_sendrecv.h  client_udp.c  client_udp.h  main.c  rtt.c  udp_send_recv.c  udp_send_recv.h  unprtt.h
client_server/Qt_winsock/common/: \  bufarray.c  bufarray.h  common.viminfo  error.c  global.c  lightthread.c  lightthread.h  macros.h  msgunit.c  msgunit.h  msgwrap.c  msgwrap.h  sendrecv_pool.c  sendrecv_pool.h  sock_types.h  sock_wrap.c  sock_wrap.h  thread_utility.c  thread_utility.h  timespan.c  timespan.h  udp_types.h  udp_utility.c  udp_utility.h  utility.c  utility.h  utility_wrap.h
client_server/Qt_winsock/doc/: DoxFile.cfg  Doxyfile
client_server/Qt_winsock/server/: main.c  msgdispatch.c  msgdispatch.h  server.pro  server_sendrecv.c  server_sendrecv.h  server_servroutine.c  server_servroutine.h  server_udp.c  server_udp.h
client_server/Qt_winsock/test/: main1.c  test.pro
client_server/Qt_winsock/test_threadpool/: bufarray.c  bufarray.h  clist.c  (+8 more)
client_server/simple_tcpip/: client.c  server.c
cmake/: build_config.cmake
doc/: Doxyfile
doc/cs/: Doxyfile
gui/src/: changelog.txt  cli_account_data.txt
samples/: CMakeLists.txt  samples.sln
samples/cmake/: samples_include.cmake
samples/lib/: ReadMe.txt  pgcs.pro  pgcs.vcproj
samples/thread/: test_thread.c  test_thread_linux.c  thread.pro
src/: CMakeLists.txt
src/am/client/: client_account.c  client_account.h
src/am/common/: account.c  account.h  account_config.c  account_config.h  account_file.c  account_file.h  account_macros.h
src/am/server/: account_login.c  account_login.h  server_account.c  server_account.h
src/common/: bufarray.c  bufarray.h  buflist.c  buflist.h  clearlist.c  clearlist.h  config_macros.h  cstypes.h  error.c  error.h  global.c  inet_pton_mingw.c  lightthread.c  lightthread.h  list.c  macros.h  msgprocess.c  msgwrap.c  msgwrap.h  processlist.c  regportlist.c  sock_wrap.c  sock_wrap.h  timespan.c  utility_wrap.c  utility_wrap.h
src/cs/client/: client.c  client.h  client_msgdispatch.c  client_msgdispatch.h  client_sendrecv.c  client_udp.c  unix_client_sendrecv.c  win_client_sendrecv.c
src/cs/common/: msgpool.c  msgpool.h  msgpool_dispatch.c  msgpool_dispatch.h  rtt.c  unprtt.h
src/cs/server/: server.c  server.h  server_msgdispatch.c  server_msgdispatch.h  server_udp.c
src/include/: config_macros.h.in
src/include/am/: account.h  account_file.h  account_login.h  account_macros.h  client_account.h  server_account.h
src/include/common/: bufarray.h  buflist.h  clearlist.h  config_macros.h  cstypes.h  error.h  inet_pton_mingw.h  jxiot.h  lightthread.h  list.h  macros.h  msgprocess.h  msgwrap.h  processlist.h  regportlist.h  sock_types.h  sock_wrap.h  timespan.h  utility_wrap.h
src/include/cs/: client.h  msgpool.h  msgpool_dispatch.h  server.h  unprtt.h
(+792 files in other folders)
